# integrity

./: .gitattributes  .gitignore  .scarbignore  .tool-versions  Cargo.toml  README.md  Scarb.toml  blake.sh  calc.py  change_hasher.py  change_layout.py  configure.py  deploy.toml  deployed_contracts.md  keccak.sh  out.txt  run.sh  rust-toolchain.toml  rustfmt.toml  snfoundry.toml  test_layouts.py  utils.py  verify-on-starknet.sh
.github/workflows/: applicative_recursion.yml  applicative_recursion_formatting_and_testing.yml  ci.yml  formatting_and_testing.yml  full.yml  partial.yml  proof_verification_tests.yml  tests.yml
applicative_recursion/: .tool-versions  Scarb.toml  deploy.toml  snfoundry.toml
applicative_recursion/src/: fact_registry.cairo  lib.cairo  merkle_tree.cairo
applicative_recursion/tests/: commutative_hash_examples.cairo  fact_registry.cairo
benches/: Cargo.toml
benches/src/: bench.rs  main.rs
contract/channel/: Scarb.toml
contract/channel/src/: lib.cairo
contract/channel/tests/: test_contract.cairo
contract/channel_contract/: Scarb.toml
contract/channel_contract/src/: lib.cairo
contract/channel_contract/tests/: test_contract.cairo
crates/channel/: Scarb.toml
crates/channel/src/: lib.cairo
crates/channel/tests/: tests.cairo
crates/common/src/: blake2s.cairo  flip_endiannes.cairo  horner_eval.cairo
crates/common/tests/: tests.cairo
crates/structs/: Scarb.toml
crates/structs/src/: fri_config.cairo  lib.cairo  stark_config.cairo  table_commitment_config.cairo  traces_config.cairo
crates/verifier/: Scarb.toml
crates/verifier/src/: models.cairo
deploy/: starknet_with_keccak.toml
deployment/: Pipfile  README.md  protostar.toml
deployment/fact_registry/: deploy.sh
deployment/proxy/: deploy.sh  replace_classhash.sh
examples/: verify_keccak_proof.sh
examples/proofs/: .gitignore  cpu_air_params.json  example_proof.json  fibonacci_input.json  generate,py  generate.py  keccak_proof.json
examples/prover/: .gitignore  cairo1_fibonacci.cairo  cpu_air_params.json  cpu_air_prover_config.json  fibonacci_input.json
examples/starknet/: .gitignore  .tool-versions  1-verify-proof.sh  2-is-valid.sh  Cargo.toml  Scarb.toml  call_contract.sh  calldata copy  dex_calldata  small_calldata  snfoundry.toml
examples/starknet/src/: main.rs
fact_registry/: 1-declare.sh  2-deploy.sh  3-is-valid.sh  Scarb.toml  snfoundry.toml
fact_registry/scripts/: 2-declare.sh  3-deploy.sh  4-is-valid.sh  5-verify-proof.sh  5-verify-zerosync.sh
fact_registry/src/: bootloader.cairo  component.cairo  fact_registry.cairo  lib.cairo  verifier.cairo
fact_registry/starknet/: deploy.toml  register_verifier.toml
fact_registry/tests/: get_stark_proof.cairo  get_stark_proof_with_serde.cairo  lib.cairo  test_contract.cairo
multicall/: add_cairo_verifier.toml  deploy_dex.toml  deploy_fact_registry.toml  deploy_fact_registry_with_verifiers.toml  deploy_recursive.toml  deploy_recursive_with_poseidon.toml  deploy_small.toml  deploy_starknet.toml  deploy_starknet_with_keccak.toml
multicall/fact_registry/: deploy.sh
multicall/proxy/: set_fact_registry.sh
runner/: Cargo.toml  README.md
runner/resources/: fulloutput.json  fulloutput.txt  input.json  parserin.txt  ready_input.json
runner/src/: ast.rs  lib.rs  main.rs  parser.lalrpop  transform.rs  vec252.rs
serializer/: Cargo.toml
serializer/src/: main.rs
smart_proof/: 1-declare.sh  3-get-proof.sh  4-verify-smart-proof.sh  Scarb.toml
smart_proof/src/: lib.cairo
src/: abstract_air.cairo  air.cairo  benches.cairo  channel.cairo  common.cairo  contracts.cairo  deserialization.cairo  domains.cairo  fact_registry.cairo  facts_registry.cairo  fri.cairo  input_structs.cairo  lib.cairo  lib_utils.cairo  oods.cairo  proof_of_work.cairo  proxy.cairo  queries.cairo  settings.cairo  stark.cairo  structs.cairo  table_commitment.cairo  tests.cairo  validation.cairo  vector_commitment.cairo  verifier.cairo
src/abstract_air/: air.cairo  diluted.cairo  public_input.cairo
src/air/: air.cairo  autogenerated.cairo  composition.cairo  config.cairo  constants.cairo  diluted.cairo  ec_point.cairo  ecdsa.cairo  global_values.cairo  layout.cairo  layouts.cairo  pedersen.cairo  periodic_columns.cairo  public_input.cairo  public_memory.cairo  public_verify.cairo  tests.cairo  traces.cairo  traces_config.cairo
src/air/layouts/: dex.cairo  (+8 more)
src/benches/: stark.cairo  table_commitment.cairo
src/channel/: Scarb.toml  channel.cairo  tests.cairo
src/common/: Scarb.toml  array_append.cairo  array_extend.cairo  array_print.cairo  array_split.cairo  asserts.cairo  bit_reverse.cairo  blake2s.cairo  blake2s_u8.cairo  consts.cairo  felt252.cairo  flip_endiannes.cairo  flip_endianness.cairo  from_span.cairo  hash.cairo  hasher.cairo  horner_eval.cairo  math.cairo  merge_sort.cairo  powers_array.cairo  split.cairo  tests.cairo  to_array.cairo
src/contracts/: fact_registry.cairo  fact_registry_interface.cairo  mocked_fact_registry.cairo  proxy.cairo  verifier.cairo
src/deserialization/: fri.cairo  pow.cairo  stark.cairo  table.cairo  traces.cairo  vector.cairo
src/fri/: fri.cairo  fri_config.cairo  fri_first_layer.cairo  fri_formula.cairo  fri_group.cairo  fri_last_layer.cairo  fri_layer.cairo  tests.cairo
src/input_structs/: public_input.cairo  stark_config.cairo  stark_proof.cairo  stark_witness.cairo
src/models/: Scarb.toml
src/proof_of_work/: config.cairo  proof_of_work.cairo  tests.cairo
src/queries/: queries.cairo  tests.cairo
src/stark/: stark_commit.cairo  stark_verify.cairo  tests.cairo
src/structs/: fri_config.cairo  proof_of_work_config.cairo  stark_config.cairo  stark_proof.cairo  stark_unsent_commitment.cairo  table_commitment_config.cairo  traces_config.cairo  vector_commitment_config.cairo
src/table_commitment/: table_commitment.cairo  tests.cairo
src/test_sandbox/: Cargo.toml
src/tests/: stone_proof_fibonacci.cairo
src/validation/: config.cairo  proof_of_work.cairo  stark.cairo  stark_config.cairo
src/vector_commitment/: tests.cairo  vector_commitment.cairo
src/verifier/: Scarb.toml
(+291 files in other folders)
