[workspace]
resolver = "2"
members = ["runner", "benches", "examples/starknet"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo/", version = "~2.8.2"}
cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo/", version = "~2.8.2"}
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo/", version = "~2.8.2"}
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo/", version = "~2.8.2"}
cairo-vm = "1.0.1"
clap = { version = "4.5.2", features = ["derive"] }
itertools = "0.13.0"
num-bigint = "0.4.4"
runner = { path = "runner" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
starknet-types-core = "0.1.5"
swiftness_proof_parser = { git = "https://github.com/iosis-tech/swiftness", rev = "a53d65ecbd7acf4611b0d587d815f4e9d4d493ed"}
thiserror = "1.0"