[workspace]
resolver = "2"
members = ["runner", "benches", "serializer"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.89"
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo/", version = "~2.8.2"}
cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo/", version = "~2.8.2"}
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo/", version = "~2.8.2"}
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo/", version = "~2.8.2"}
cairo-vm = "1.0.1"
clap = { version = "4.5.17", features = ["derive"] }
itertools = "0.13.0"
num-bigint = "0.4.6"
runner = { path = "runner" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
starknet-types-core = "0.1.5"
swiftness_proof_parser = "0.1.0"
thiserror = "1.0.63"