[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cairo-felt.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-utils.workspace = true
cairo-vm.workspace = true
clap.workspace = true
itertools.workspace = true
lalrpop-util.workspace = true
num-bigint.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true