[package]
name = "runner"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cairo-args-runner.workspace = true
cairo-proof-parser.workspace = true
clap.workspace = true
num-bigint.workspace = true
