[package]
name = "runner"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-utils.workspace = true
cairo-vm.workspace = true
clap.workspace = true
itertools.workspace = true
num-bigint.workspace = true
serde_json.workspace = true
serde.workspace = true
starknet-types-core.workspace = true
swiftness_proof_parser.workspace = true
thiserror.workspace = true